<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.safsaf.noon3.PrimaryActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PrimaryTextView"
        android:textColor="#FFC70620"
        android:textSize="100sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView9" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PrimaryButton1"
        android:id="@+id/button1"
        android:background="@drawable/round_button"
        android:textColor="#ffffff"
        android:textSize="100sp"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PrimaryButton2"
        android:id="@+id/button2"
        android:background="@drawable/round_button"
        android:textColor="#ffffff"
        android:textSize="100sp"
        android:layout_alignTop="@+id/button1"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PrimaryButton3"
        android:id="@+id/button3"
        android:background="@drawable/round_button"
        android:textColor="#ffffff"
        android:textSize="100sp"
        android:layout_alignTop="@+id/button2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />





    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PrimaryButton4"
        android:id="@+id/button4"
        android:background="@drawable/round_button"
        android:textColor="#ffffff"
        android:textSize="100sp"
        android:layout_alignTop="@+id/button5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PrimaryButton5"
        android:id="@+id/button5"
        android:background="@drawable/round_button"
        android:textColor="#ffffff"
        android:textSize="100sp"
        android:layout_marginBottom="54dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PrimaryButton6"
        android:id="@+id/button6"
        android:background="@drawable/round_button"
        android:textColor="#ffffff"
        android:textSize="100sp"
        android:layout_alignBottom="@+id/button5"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />






</RelativeLayout>

