<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.safsaf.noon3.KidsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/KidsTextView"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/KidsTextView2"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/KidsTextView3"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/KidsTextView4"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/view"
        android:layout_alignStart="@+id/view"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/KidsTextView5"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp" />

    <View
        android:layout_width="250dp"
        android:layout_height="2dp"
        android:background="@android:color/holo_red_dark"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:id="@+id/view" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/KidsTextView6"
        android:textSize="50sp"
        android:textColor="#2e7d32"
        android:id="@+id/textView6"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:src="@drawable/primary"
        android:id="@+id/imageView5"
        android:layout_alignBottom="@+id/imageView7"
        android:layout_toLeftOf="@+id/imageView6"
        android:layout_toStartOf="@+id/imageView6" />
    <ImageView
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:src="@drawable/pr"
        android:id="@+id/imageView6"
        android:layout_alignTop="@+id/imageView5"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:src="@drawable/m"
        android:id="@+id/imageView7"
        android:layout_below="@+id/textView6"
        android:layout_toLeftOf="@+id/textView6"
        android:layout_toStartOf="@+id/textView6" />


</RelativeLayout>
